Bugfix: KIX17-1197
fixed overlap of menu tabs in the control row

--- a/var/httpd/htdocs/skins/Agent/default/css/Base.Overview.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Base.Overview.css
@@ -91,6 +91,9 @@
     .OverviewControl > div {
         padding: 0 16px 0 8px;
     }
+    .OverviewControl > div > .ControlRow{
+        padding-right: 55px;
+    }
     .ControlRow {
         position: relative;
         overflow: hidden;
